--- a/my-app/CSS/cuenta.css
+++ b/my-app/CSS/cuenta.css
@@ -1463,4 +1463,14 @@ top: 10px;
     background-color: #0056b3; /* Azul oscuro */
 }
 
+.table-responsive {
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+}
+
+.table-responsive table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
 
